--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -4,8 +4,8 @@
 @thumbImageHeight: 60px;
 @radiusBlockElement: 0px;
 @radiusWidget: @radiusBlockElement;
-@closeBtnSize: 21px;
-@widgetSidePadding: 10px;
+@roundBtnSize: 16px;
+@widgetSidePadding: 15px;
 @widgetVerticalPadding: 10px;
 
 // responsive
@@ -26,6 +26,7 @@
 
 @textColorDark: #222;
 @textColorMedium: #777;
+@textColorButton: #777;
 @textColorMuted: #999;
 @textColorLight: #bbb;
 
