--- a/modules/mod_admin/lib/less/zotonic-admin.less
+++ b/modules/mod_admin/lib/less/zotonic-admin.less
@@ -20,15 +20,16 @@ limitations under the License.
 #3L {@import "3L/3L";}
 
 @import "variables.less";
+@import "../../../mod_base/lib/less/z.icons.less";
 @import "mixins.less";
 @import "base.less";
 @import "bootstrap-overrides.less";
+@import "buttons.less";
 @import "connections-list.less";
 @import "edit-blocks.less";
 @import "edit-media.less";
 @import "edit.less";
 @import "form.less";
-@import "icon.less";
 @import "image.less";
 @import "logon.less";
 @import "map.less";
