admin: general layout fixes

--- a/modules/mod_admin/lib/less/bootstrap-overrides.less
+++ b/modules/mod_admin/lib/less/bootstrap-overrides.less
@@ -81,3 +81,12 @@
 .nav + .tab-content {
     margin: 10px 0 0 0;
 }
+
+.radio-inline,
+.checkbox-inline,
+.radio-inline + .radio-inline,
+.checkbox-inline + .checkbox-inline {
+    margin-left: 0;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
