--- a/modules/mod_base/lib/css/z.icons.css
+++ b/modules/mod_base/lib/css/z.icons.css
@@ -19,6 +19,13 @@ put the text inside <em>:
 
 For advanced usage, see the file z.icons.less.
 */
+@font-face {
+  font-family: 'Zotonic';
+  src: url('/lib/css/z.icons/fonts/icomoon.eot?v=1');
+  src: url('/lib/css/z.icons/fonts/icomoon.eot?#iefix&v=1') format('embedded-opentype'), url('/lib/css/z.icons/fonts/icomoon.woff?v=1') format('woff'), url('/lib/css/z.icons/fonts/icomoon.ttf?v=1') format('truetype'), url('/lib/css/z.icons/fonts/icomoon.svg?v=1#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 .z-icon-cross:before {
   content: "\e60c";
 }
@@ -49,11 +56,11 @@ For advanced usage, see the file z.icons.less.
 .z-icon-off:before {
   content: "\e602";
 }
-.z-icon-ok-circle:before {
-  content: "\e60a";
-}
 .z-icon-ok:before {
   content: "\e608";
+}
+.z-icon-ok-circle:before {
+  content: "\e60a";
 }
 .z-icon-plus:before {
   content: "\e604";
@@ -64,16 +71,9 @@ For advanced usage, see the file z.icons.less.
 .zotonic-logo:before {
   content: "\5a";
 }
-@font-face {
-  font-family: 'Zotonic';
-  src: url('/lib/css/z.icons/fonts/icomoon.eot?pzaagd');
-  src: url('/lib/css/z.icons/fonts/icomoon.eot?#iefixpzaagd') format('embedded-opentype'), url('/lib/css/z.icons/fonts/icomoon.woff?pzaagd') format('woff'), url('/lib/css/z.icons/fonts/icomoon.ttf?pzaagd') format('truetype'), url('/lib/css/z.icons/fonts/icomoon.svg?pzaagd#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
 .z-icon,
+.fa-icon,
 .zotonic-logo {
-  font-family: 'Zotonic';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -85,14 +85,22 @@ For advanced usage, see the file z.icons.less.
   -moz-osx-font-smoothing: grayscale;
 }
 a.z-icon:hover,
+a.fa-icon:hover,
 a.zotonic-logo:hover {
   text-decoration: none;
 }
 .z-icon em,
+.fa-icon em,
 .zotonic-logo em {
   display: none;
 }
-/* Logo shortcuts */
+.z-icon,
+.zotonic-logo {
+  font-family: "Zotonic";
+}
+.fa-icon {
+  font-family: 'FontAwesome';
+}
 .zotonic-logo {
   font-size: 0.85em;
   padding-right: 0.25em;
