--- a/modules/mod_base/lib/less/variables.less
+++ b/modules/mod_base/lib/less/variables.less
@@ -1,7 +1,7 @@
-@z-css-prefix: z-icon;
-@z-font-path: "/lib/css/z.icons/fonts";
-@z-version: 1;
-@z-font-family: "Zotonic";
+@zFontPath: "/lib/css/z.icons/fonts";
+@zVersion: 1;
+@zFontFamily: "Zotonic";
+@zRoundBtnSize: 16px;
 
 // Icon chars
 @icon-cross: "\e60c";
@@ -10,12 +10,6 @@
 @icon-edit: "\e606";
 @icon-help-circle: "\e600";
 @icon-info-circle: "\e601";
-@icon-load: "\e607";
 @icon-logo: "\5a";
-@icon-minus: "\e603";
-@icon-off: "\e602";
-@icon-ok: "\e608";
-@icon-ok-circle: "\e60a";
-@icon-plus: "\e604";
 @icon-user: "\e605";
 @zotonic-logo: @icon-logo;
