--- a/modules/mod_base/lib/less/z.icons.less
+++ b/modules/mod_base/lib/less/z.icons.less
@@ -64,10 +64,10 @@ For advanced usage, see the file z.icons.less.
 
 @import "variables.less";
 @import "path.less";
-@import "icons.less";
-@import "mixins.less";
 @import "core.less";
-@import "convenience.less";
+@import "extend.less";
+@import "icons.less";
+@import "icon-buttons.less";
 
 @z-fa-path: "../../../mod_artwork/lib/font-awesome-4/less";
 @import (reference) "@{z-fa-path}/font-awesome.less";
