--- a/modules/mod_base/lib/less/icons.less
+++ b/modules/mod_base/lib/less/icons.less
@@ -1,15 +1,30 @@
-.@{z-css-prefix}-cross:before { content: @icon-cross; }
-.@{z-css-prefix}-cross-circle:before { content: @icon-cross-circle; }
-.@{z-css-prefix}-drag:before { content: @icon-drag; }
-.@{z-css-prefix}-edit:before { content: @icon-edit; }
-.@{z-css-prefix}-help-circle:before { content: @icon-help-circle; }
-.@{z-css-prefix}-info-circle:before { content: @icon-info-circle; }
-.@{z-css-prefix}-load:before { content: @icon-load; }
-.@{z-css-prefix}-logo:before { content: @icon-logo; }
-.@{z-css-prefix}-minus:before { content: @icon-minus; }
-.@{z-css-prefix}-off:before { content: @icon-off; }
-.@{z-css-prefix}-ok:before { content: @icon-ok; }
-.@{z-css-prefix}-ok-circle:before { content: @icon-ok-circle; }
-.@{z-css-prefix}-plus:before { content: @icon-plus; }
-.@{z-css-prefix}-user:before { content: @icon-user; }
+.z-icon-cross:before { content: @icon-cross; }
+.z-icon-cross-circle:before { content: @icon-cross-circle; }
+.z-icon-drag:before { content: @icon-drag; }
+.z-icon-edit:before { content: @icon-edit; }
+.z-icon-help-circle:before { content: @icon-help-circle; }
+.z-icon-info-circle:before { content: @icon-info-circle; }
+.z-icon-logo:before { content: @icon-logo; }
+.z-icon-user:before { content: @icon-user; }
 .zotonic-logo:before { content: @zotonic-logo; }
+
+.zotonic-logo {
+    &:extend(.z-icon all);
+    font-size: 0.85em;
+    padding-right: 0.25em; // room for adjacent text
+}
+.z-icon-plus {
+    .extend_icon(fa, fa-var-plus);
+}
+.z-icon-minus {
+    .extend_icon(fa, fa-var-minus);
+}
+.z-icon-off {
+    .extend_icon(fa, fa-var-power-off);
+}
+.z-icon-ok {
+    .extend_icon(fa, fa-var-check);
+}
+.z-icon-ok-circle {
+    .extend_icon(fa, fa-var-check-circle);
+}
