--- a/modules/mod_base/lib/less/path.less
+++ b/modules/mod_base/lib/less/path.less
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Zotonic';
-    src: url('@{z-font-path}/icomoon.eot?v=@{z-version}');
-    src: url('@{z-font-path}/icomoon.eot?#iefix&v=@{z-version}') format('embedded-opentype'),
-    url('@{z-font-path}/icomoon.woff?v=@{z-version}') format('woff'),
-    url('@{z-font-path}/icomoon.ttf?v=@{z-version}') format('truetype'),
-    url('@{z-font-path}/icomoon.svg?v=@{z-version}#icomoon') format('svg');
+    src: url('@{zFontPath}/icomoon.eot?v=@{zVersion}');
+    src: url('@{zFontPath}/icomoon.eot?#iefix&v=@{zVersion}') format('embedded-opentype'),
+    url('@{zFontPath}/icomoon.woff?v=@{zVersion}') format('woff'),
+    url('@{zFontPath}/icomoon.ttf?v=@{zVersion}') format('truetype'),
+    url('@{zFontPath}/icomoon.svg?v=@{zVersion}#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
