--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -89,13 +89,13 @@
     
         .z-icon-plus,
         .z-icon-minus {
-            @_icon_width: 14px;
-            @_icon_height: 16px;
+            @_icon_size: 16px;
             display: block;
-            font-size: @_icon_width;
-            width: @_icon_width;
-            height: @_icon_height;
-            line-height: @_icon_height;
+            text-align: center;
+            font-size: @_icon_size;
+            width: @_icon_size;
+            height: @_icon_size;
+            line-height: @_icon_size;
             text-shadow: none;
         }
     }
